Change logo url

--- a/app.html
+++ b/app.html
@@ -31,7 +31,7 @@
 		<div class="cab-element menu-logo" onclick="Annotate.OpenCloseMenu();"></div>
 		
 		<!-- Logo -->
-		<a href="https://jmjuanes.github.io/annotate/" class="logo" target="_blank">Annotate!</a>
+		<a href="./" class="logo">Annotate!</a>
 		
 	</div>
 	
