Add Annotate! logo

--- a/index.html
+++ b/index.html
@@ -26,16 +26,19 @@
 	<div class="presentacion" align="center">
 	
 		<!-- Espacios -->
-		<br><br><br><br>
+		<br><br><br>
 		
 		<!-- Titulo -->
-		<span class="presentacion-h1">Annotate!</span><br>
+		<!-- <span class="presentacion-h1">Annotate!</span><br> -->
+		
+		<!-- Logo -->
+		<div class="presentacion-logo"></div>
 		
 		<!-- Descripcion -->
 		<span class="presentacion-h2">Annotate manually selected regions in TilingScan.</span>
 		
 		<!-- Espacios -->
-		<br><br>
+		<br><br><br>
 		
 		<!-- Boton -->
 		<a href="./app" class="presentacion-btn">Open Annotate!</a>
