--- a/app.html
+++ b/app.html
@@ -19,6 +19,9 @@
 	
 	<script type="text/javascript" src="js/libs/FileSaver.js"></script>
 	<script type="text/javascript" src="js/libs/jszip.js"></script>
+	
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="img/favicon.ico">
 </head>
 <body>
 	<!-- Loader -->
