--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	
 	<!-- Hojas de estilos -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="img/favicon.ico">
 </head>
 <body>
 
