--- a/index.html
+++ b/index.html
@@ -16,35 +16,28 @@
 	<link rel="shortcut icon" href="img/favicon.ico">
 </head>
 <body>
-
-	<!-- Cabecera -->
-	<div class="cab">
-	
-		<!-- Logo -->
-		<a href="./" class="logo">Annotate!</a>
-		
-	</div>
 	
 	<!-- Presentacion -->
-	<div class="presentacion" align="center">
+	<div class="pre" align="center">
 	
 		<!-- Espacios -->
-		<br><br><br>
-		
-		<!-- Titulo -->
-		<!-- <span class="presentacion-h1">Annotate!</span><br> -->
+		<br><br><br><br>
 		
 		<!-- Logo -->
-		<div class="presentacion-logo"></div>
+		<div class="pre-logo"></div>
+		
+		<!-- Titulo -->
+		<span class="pre-h1">Annotate!</span><br>
 		
 		<!-- Descripcion -->
-		<span class="presentacion-h2">Annotate manually selected regions in TilingScan.</span>
+		<span class="pre-h2">Annotate manually selected regions in 
+		<a href="http://biprote.uv.es/" class="pre-h2" target="_blank">TilingScan</a>.</span>
 		
 		<!-- Espacios -->
-		<br><br><br>
+		<br><br><br><br>
 		
 		<!-- Boton -->
-		<a href="./app" class="presentacion-btn">Open Annotate!</a>
+		<a href="./app" class="pre-btn">Open Annotate!</a>
 		
 	</div>
 	
