--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 		<span class="pre-h1">Annotate!</span><br>
 		
 		<!-- Descripcion -->
-		<span class="pre-h2">Annotate manually selected regions in 
+		<span class="pre-h2">An application for annotate manually selected<br> regions in 
 		<a href="http://biprote.uv.es/" class="pre-h2" target="_blank">TilingScan</a>.</span>
 		
 		<!-- Espacios -->
-		<br><br><br><br>
+		<br><br><br>
 		
 		<!-- Boton -->
 		<a href="./app" class="pre-btn">Open Annotate!</a>
