--- a/index.html
+++ b/index.html
@@ -20,38 +20,46 @@
 	<!-- Presentacion -->
 	<div class="pre" align="center">
 	
-		<!-- Espacios -->
-		<br><br><br><br>
+		<!-- Celda -->
+		<div class="pre-cell">
 		
-		<!-- Logo -->
-		<div class="pre-logo"></div>
+			<!-- Logo -->
+			<div class="pre-logo"></div>
+			
+			<!-- Titulo -->
+			<span class="pre-h1">Annotate!</span><br>
+			
+			<!-- Descripcion -->
+			<span class="pre-h2">An application for annotate manually selected<br> regions in 
+			<a href="http://biprote.uv.es/" class="pre-h2" target="_blank">TilingScan</a>.</span>
+			
+			<!-- Espacios -->
+			<br><br><br>
+			
+			<!-- Boton -->
+			<a href="./app" class="pre-btn">Open Annotate!</a>
 		
-		<!-- Titulo -->
-		<span class="pre-h1">Annotate!</span><br>
-		
-		<!-- Descripcion -->
-		<span class="pre-h2">An application for annotate manually selected<br> regions in 
-		<a href="http://biprote.uv.es/" class="pre-h2" target="_blank">TilingScan</a>.</span>
-		
-		<!-- Espacios -->
-		<br><br><br>
-		
-		<!-- Boton -->
-		<a href="./app" class="pre-btn">Open Annotate!</a>
+		</div>
 		
 	</div>
-	
-	
-	<!-- Espacios -->
-	<br><br>
-	
+
 	<!-- Pie -->
 	<div class="pie" align="center">
 		
-		<br>
-		Copyright 2014 Vicente Arnau, Jose Enrique Perez, Ana Miguel &amp; Jose Miguel Juanes
+		<!-- Espacios -->
 		<br><br>
+		
+		<!-- Copyright -->
+		Copyright 2014 Vicente Arnau, Jose Enrique Perez, Ana Miguel &amp; 
+		<a href="http://www.jmjuanes.es" target="_blank" class="pie-text">Jose M. Juanes</a>.
+		
+		<!-- Espacios -->
+		<br><br>
+		
+		<!-- Universidad de valencia -->
 		<b>Universidad de Valencia - Spain</b>
+		
+		<!-- Espacios -->
 		<br><br><br>
 		
 	</div>
