--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="pre" align="center">
 	
 		<!-- Celda -->
-		<div class="pre-cell">
+		<div class="pre-cell" align="center">
 		
 			<!-- Logo -->
 			<div class="pre-logo"></div>
