Changed Annotate URL

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			
 			<!-- Descripcion -->
 			<span class="pre-h2">An application for annotate manually selected<br> regions in 
-			<a href="http://biprote.uv.es/" class="pre-h2" target="_blank">TilingScan</a>.</span>
+			<a href="http://tilingscan.uv.es/" class="pre-h2" target="_blank">TilingScan</a>.</span>
 			
 			<!-- Espacios -->
 			<br><br><br>
