--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<span class="pre-h1">Annotate!</span><br>
 			
 			<!-- Descripcion -->
-			<span class="pre-h2">An application for annotate manually selected<br> regions in 
+			<span class="pre-h2">An application for the annotation of manually selected<br> regions in 
 			<a href="http://tilingscan.uv.es/" class="pre-h2" target="_blank">TilingScan</a>.</span>
 			
 			<!-- Espacios -->
