--- a/app.html
+++ b/app.html
@@ -17,8 +17,8 @@
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="https://jmjuanes.github.io/api/js/storage.js"></script>
 	
-	<script type="text/javascript" src="js/libs/FileSaver.js"></script>
-	<script type="text/javascript" src="js/libs/jszip.js"></script>
+	<script type="text/javascript" src="https://annotateapp.github.io/libs/FileSaver.js"></script>
+	<script type="text/javascript" src="https://annotateapp.github.io/libs/jszip.js"></script>
 	
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="img/favicon.ico">
