--- a/app.html
+++ b/app.html
@@ -15,7 +15,7 @@
 	
 	<!-- Javascript -->
 	<script type="text/javascript" src="js/app.js"></script>
-	<script type="text/javascript" src="https://jmjuanes.github.io/api/js/storage.js"></script>
+	<script type="text/javascript" src="js/storage.js"></script>
 	
 	<script type="text/javascript" src="https://annotateapp.github.io/libs/FileSaver.js"></script>
 	<script type="text/javascript" src="https://annotateapp.github.io/libs/jszip.js"></script>
