Update libs source

--- a/app.html
+++ b/app.html
@@ -8,7 +8,7 @@
 	<title>Annotate!</title>
 	
 	<!-- Api -->
-	<link rel="stylesheet" type="text/css" href="https://jmassets.github.io/fonts/opensans.css">
+	<link rel="stylesheet" type="text/css" href="https://jmjuanes.github.io/assets/fonts/opensans.css">
 	
 	<!-- Hojas de estilos -->
 	<link rel="stylesheet" type="text/css" href="css/app.css">
@@ -17,8 +17,8 @@
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/storage.js"></script>
 	
-	<script type="text/javascript" src="https://annotateapp.github.io/libs/FileSaver.js"></script>
-	<script type="text/javascript" src="https://annotateapp.github.io/libs/jszip.js"></script>
+	<script type="text/javascript" src="https://tilingscan.github.io/vendor/FileSaver.js"></script>
+	<script type="text/javascript" src="https://tilingscan.github.io/vendor/jszip.js"></script>
 	
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="img/favicon.ico">
