--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Annotate!</title>
 	
 	<!-- Api -->
-	<link rel="stylesheet" type="text/css" href="https://jmassets.github.io/fonts/opensans.css">
+	<link rel="stylesheet" type="text/css" href="https://jmjuanes.github.io/assets/fonts/opensans.css">
 	
 	<!-- Hojas de estilos -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
