--- a/app.html
+++ b/app.html
@@ -8,7 +8,7 @@
 	<title>Annotate!</title>
 	
 	<!-- Api -->
-	<link rel="stylesheet" type="text/css" href="https://jmassets.github.io/fonts/opensans.css">
+	<link rel="stylesheet" type="text/css" href="https://jmjuanes.github.io/fonts/opensans.css">
 	
 	<!-- Hojas de estilos -->
 	<link rel="stylesheet" type="text/css" href="css/app.css">
