--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		
 		<!-- Copyright -->
 		Copyright 2014 Vicente Arnau, Jose Enrique Perez, Ana Miguel &amp; 
-		<a href="http://www.jmjuanes.es" target="_blank" class="pie-text">Jose M. Juanes</a>.
+		<a href="http://jm.juanes.xyz" target="_blank" class="pie-text">Jose M. Juanes</a>.
 		
 		<!-- Espacios -->
 		<br><br>
